--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.2",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -23,7 +24,9 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.8",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.4",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
